Added changing to frontend/ directory for commands

--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -9,10 +9,14 @@ phases:
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
+      - cd frontend/
+      - pwd
       - npm install
   build:
     commands:
       - echo Build started on `date`
+      - cd frontend/
+      - pwd
       - npm run build
   post_build:
     commands:
