--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -12,6 +12,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - cd backend/
+      - sam --version
       - sam build
   post_build:
     commands:
